# cajal-project-16

./: 01_scrna_analysis.ipynb  02_gene_regulation_network_analysis.ipynb  Explanation QC  Project16.ipynb  README.md  grn_analysis_paper.ipynb  pyproject.toml
data/: parse_meta.csv
scripts/: 01_download_scrna.sh  02_prepare_data.py
