[project]
name = "cajal-neuromics-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.6",
    "celltypist>=1.7.1",
    "harmonypy>=2.0.0",
    "igraph>=1.0.0",
    "jupyterlab>=4.6.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "pyscenic>=0.12.1",
    "rustscenic>=0.4.7",
    "scanpy>=1.12.1",
    "scikit-image>=0.26.0",
    "scikit-misc>=0.5.2",
    "scipy-stubs~=1.18.0",
]
